--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,300;0,400;0,600;0,700;1,100;1,200;1,400;1,600&display=swap");
+
 body {
   font-family: "Poppins", sans-serif;
   margin: 0px;
@@ -42,7 +44,7 @@ body {
 .pablo Img {
   width: 100%;
 }
-input {
+.form input {
   width: 80%;
   height: 30px;
   border: 2px solid rgba(84, 95, 125, 0.15);
@@ -96,8 +98,162 @@ span {
   line-height: 19px;
   text-transform: uppercase;
   margin-top: 20px;
+  cursor: pointer;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  position: sticky;
+  top: 0px;
+  font-family: "Work Sans", sans-serif;
+  height: 50px;
+  background-color: white;
 }
 
+nav .logos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 170px;
+  height: 40px;
+}
+.navInput {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.navInput input {
+  border-width: thin;
+  padding: 10px;
+  width: 400px;
+  border-radius: 8px;
+  border-color: lightgrey;
+  border: 1px solid #213f7d;
+}
+
+.navInput input:focus {
+  border-color: transparent;
+  outline-color: lightgrey;
+}
+.navInput button {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 38px;
+  background: #39cdcc;
+  /* padding: ; */
+  position: absolute;
+  right: 0.5px;
+
+  border: none;
+  width: 50px;
+  border-radius: 0px 8px 8px 0px;
+}
+
+.navicons {
+  padding: 10px;
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.FaBell {
+  font-size: 25px;
+}
+.doc {
+  border-bottom: 1px solid lightgray;
+}
+.userImg {
+  background-color: azure;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+}
+.navicons h3 {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  color: #213f7d;
+}
+/* .userImg img {
+  width: 100%;
+} */
+.userName {
+  width: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.angledown {
+  margin-top: 20px;
+}
+aside {
+  padding: 30px 0px;
+  font-family: "Work Sans", sans-serif;
+  border-color: rgb(230, 226, 226);
+  border-width: thin;
+  position: fixed;
+  overflow-y: scroll;
+  width: 300px;
+  height: 100vh;
+}
+
+aside div {
+  padding-left: 20px;
+  height: 43px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  color: #213f7d;
+}
+aside .dashboard {
+  margin: 30px 0px;
+}
+aside h5 {
+  padding-left: 20px;
+  margin: 15px 0px;
+  color: #545f7d;
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+}
+aside p {
+  font-size: 16px;
+}
+
+.activeTab {
+  background-color: rgb(57, 212, 212, 0.06);
+  border-left: 3px solid #39cdcc;
+}
+.content {
+  width: 78%;
+  height: 100vh;
+  margin-left: auto;
+  background-color: #e5e5e5;
+  /* text-align: center; */
+}
+.test {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+.test h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  width: 300px;
+  height: 150px;
+}
 @media only screen and (min-width: 680px) {
   .welcome {
     margin: auto;
