completed navbar responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -42,13 +42,14 @@ body {
   color: #545f7d;
 }
 .pablo {
-  width: 400px;
+  margin-top: 30px;
+  min-width: 45%;
 }
 .pablo Img {
   width: 100%;
 }
 .form input {
-  width: 80%;
+  width: 85%;
   height: 30px;
   border: 2px solid rgba(84, 95, 125, 0.15);
   border-radius: 5px;
@@ -70,10 +71,10 @@ body {
 .pass {
   position: relative;
 }
-span {
+.pass span {
   cursor: pointer;
   position: absolute;
-  right: 95px;
+  right: 80px;
   top: 18px;
   font-weight: 600;
   font-size: 12px;
@@ -81,6 +82,16 @@ span {
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: #39cdcc;
+}
+
+.welcome {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
+  gap: 10px;
+  padding: 30px;
 }
 .welcome button {
   font-family: "Avenir Next";
@@ -108,11 +119,10 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
   position: sticky;
   top: 0px;
   font-family: "Work Sans", sans-serif;
-  height: 40px;
+
   background-color: white;
 }
 .bars {
@@ -127,15 +137,6 @@ nav .logos {
   height: 40px;
 }
 
-.navInput input {
-  border-width: thin;
-  padding: 10px;
-  width: 170px;
-  border-radius: 8px;
-  border-color: lightgrey;
-  border: 1px solid #213f7d;
-}
-
 .navInput input:focus {
   border-color: transparent;
   outline-color: lightgrey;
@@ -147,20 +148,15 @@ nav .logos {
   align-items: center;
   height: 37px;
   background: #39cdcc;
-  position: absolute;
-  right: 20px;
-  top: 22px;
   border: none;
   width: 30px;
   border-radius: 0px 8px 8px 0px;
 }
-
 .navicons {
-  padding: 10px;
-  width: 280px;
-  display: none;
-  justify-content: space-between;
-  align-items: center;
+  width: 320px;
+}
+.Bar {
+  display: block;
 }
 .FaBell {
   font-size: 25px;
@@ -170,6 +166,7 @@ nav .logos {
   border-bottom: 1px solid lightgray;
 }
 .userImg {
+  display: block;
   background-color: azure;
   width: 50px;
   height: 50px;
@@ -185,12 +182,7 @@ nav .logos {
 /* .userImg img {
   width: 100%;
 } */
-.userName {
-  width: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+
 .angledown {
   margin-top: 20px;
 }
@@ -336,21 +328,19 @@ td {
 }
 
 @media only screen and (min-width: 940px) {
-  .welcome {
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: space-between;
-    gap: 10px;
-    padding: 30px;
+  .pass span {
+    cursor: pointer;
+    position: absolute;
+    right: 100px;
+    top: 18px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #39cdcc;
   }
-  aside {
-    display: block;
-  }
-  .Bar {
-    display: none;
-  }
+
   .unionImg {
     width: 20px;
     height: 20px;
@@ -374,20 +364,11 @@ td {
   }
 
   .navInput input {
-    border-width: thin;
     padding: 10px;
-    width: 400px !important;
+    width: 420px;
     border-radius: 8px;
     border-color: lightgrey;
     border: 1px solid #213f7d;
-  }
-
-  .navicons {
-    padding: 10px;
-    width: 280px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
   }
 
   .navInput button {
@@ -395,22 +376,26 @@ td {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 38px;
+    height: 40px;
     background: #39cdcc;
     position: absolute;
     top: auto;
-    right: 0.5px;
+    right: 1px;
     border: none;
     width: 50px;
     border-radius: 0px 8px 8px 0px;
-  }
-  .pablo {
-    margin-top: 40px;
-    width: 45%;
   }
 
   .form {
     margin-top: 0px;
     width: 40%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  aside {
+    display: block;
+  }
+  .Bar {
+    display: none;
   }
 }
