--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ nav {
   position: sticky;
   top: 0px;
   font-family: "Work Sans", sans-serif;
-
+  height: 100px;
   background-color: white;
 }
 .bars {
@@ -179,9 +179,6 @@ nav .logos {
   font-size: 16px;
   color: #213f7d;
 }
-/* .userImg img {
-  width: 100%;
-} */
 
 .angledown {
   margin-top: 20px;
@@ -193,28 +190,29 @@ aside {
   border-color: rgb(230, 226, 226);
   border-width: thin;
   position: sticky !important;
-  top: 80px !important;
+  top: 100px;
   overflow-y: scroll;
   width: 30%;
-  height: calc(90vh - 90px);
+  height: calc(98vh - 90px);
 }
 .default {
   display: flex;
 }
 aside div {
-  padding-left: 20px;
+  padding-left: 25px;
   height: 43px;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
-  gap: 10px;
+  align-items: center !important;
+  gap: 12px;
   color: #213f7d;
 }
 aside .dashboard {
   margin: 30px 0px;
 }
+
 aside h5 {
-  padding-left: 20px;
+  padding-left: 25px;
   margin: 15px 0px;
   color: #545f7d;
   font-family: "Work Sans";
@@ -223,6 +221,7 @@ aside h5 {
   font-size: 15px;
 }
 aside p {
+  margin: 0px;
   font-size: 16px;
 }
 
@@ -247,6 +246,7 @@ aside p {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 15px;
 }
 .container-box div {
   box-sizing: border-box;
@@ -291,14 +291,12 @@ aside p {
 }
 
 table {
-  padding: 10px;
   width: 100%;
   margin: 30px auto;
-  border-width: thin;
   background: #ffffff;
   border: 1px solid rgba(33, 63, 125, 0.06);
   box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
-  border-radius: 4px;
+  border-radius: 4px !important;
 }
 
 table div {
@@ -312,13 +310,9 @@ table div {
   color: #545f7d;
   width: fit-content;
 }
-tr,
-th,
-td {
-  padding: 10px;
-}
 
 td {
+  padding: 10px !important;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -326,7 +320,39 @@ td {
   line-height: 16px;
   vertical-align: middle;
 }
-
+.active-Btn {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #545f7d;
+}
+.tabBtn {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: rgb(84, 95, 125, 0.6);
+  background-color: transparent;
+}
+.btn-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 400px;
+}
+.btn-container button {
+  border: none;
+}
+.p-btn {
+  background: rgba(33, 63, 125, 0.1);
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media only screen and (min-width: 940px) {
   .pass span {
     cursor: pointer;
