--- a/src/index.css
+++ b/src/index.css
@@ -42,14 +42,13 @@ body {
   color: #545f7d;
 }
 .pablo {
-  margin-top: 30px;
   min-width: 45%;
 }
 .pablo Img {
   width: 100%;
 }
 .form input {
-  width: 85%;
+  width: 100%;
   height: 30px;
   border: 2px solid rgba(84, 95, 125, 0.15);
   border-radius: 5px;
@@ -74,7 +73,7 @@ body {
 .pass span {
   cursor: pointer;
   position: absolute;
-  right: 80px;
+  right: 10px;
   top: 18px;
   font-weight: 600;
   font-size: 12px;
@@ -91,11 +90,11 @@ body {
   width: 100%;
   justify-content: space-between;
   gap: 10px;
-  padding: 30px;
+  padding: 10px;
 }
 .welcome button {
   font-family: "Avenir Next";
-  min-width: 85%;
+  width: 100%;
   height: 30px;
   background: #39cdcc;
   border: none;
@@ -231,7 +230,7 @@ aside p {
 }
 .content {
   font-family: "Work Sans";
-  padding: 30px;
+  padding: 10px;
   width: 100%;
   background-color: #e5e5e5;
 }
@@ -368,6 +367,20 @@ td {
   color: #545f7d;
 }
 @media only screen and (min-width: 940px) {
+  .pablo {
+    margin-top: 30px;
+  }
+
+  .form input {
+    width: 85%;
+  }
+
+  .welcome button {
+    width: 85%;
+  }
+  .content {
+    padding: 20px;
+  }
   .pass span {
     cursor: pointer;
     position: absolute;
